--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -7,102 +7,76 @@
     <title>Location-Based To-Do</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             text-align: center;
             padding: 20px;
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
+            background: linear-gradient(135deg, #2c3e50, #4ca1af);
+            color: #e4bdbd;
             transition: background 0.5s ease-in-out;
-            color: white;
-        }
-
-        .overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            z-index: -1;
         }
 
         .container {
             max-width: 600px;
             margin: auto;
-            background: rgba(0, 0, 0, 0.8);
+            background: rgb(0, 0, 0);
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.3);
-            backdrop-filter: blur(10px);
+            box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(8px);
         }
 
-        select,
-        button {
-            padding: 10px;
+        select, button, input {
+            padding: 12px;
             font-size: 16px;
             margin: 10px;
             border-radius: 5px;
             border: none;
+            outline: none;
+            transition: all 0.3s ease;
         }
 
         select {
-            background: #444;
-            color: white;
+            background: #fff;
+            color: #333;
+            width: 100%;
         }
 
         button {
-            background: green;
+            background: #71e513;
             color: white;
             cursor: pointer;
-            transition: background 0.3s;
         }
 
         button:hover {
-            background: darkgreen;
+            background: #219150;
         }
 
-        #tasks,
-        #city-info {
-            margin-top: 20px;
-            text-align: left;
-        }
-
-        #city-info div {
+        #city-info div, ul li {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background: rgba(255, 255, 255, 0.2);
+            color: white;
+            background: rgb(3 32 4);
             padding: 10px;
             margin-top: 5px;
             border-radius: 5px;
+            transition: all 0.3s ease;
         }
-
 
         ul {
             list-style-type: none;
             padding: 0;
         }
 
-        li {
-            display: flex;
-            justify-content: space-between;
-            background: rgba(255, 255, 255, 0.2);
-            padding: 10px;
-            margin-top: 5px;
-            border-radius: 5px;
-        }
-
-        .disabled {
-            background: gray !important;
-            cursor: not-allowed;
+        li.done {
+            text-decoration: line-through;
+            opacity: 0.5;
+            transition: opacity 0.5s ease;
         }
     </style>
 </head>
 
 <body>
-    <div class="overlay"></div>
     <div class="container">
         <h1>Location-Based To-Do</h1>
         <label for="city">Select Your City:</label>
@@ -126,6 +100,10 @@
         <div id="city-info"></div>
         <h2>Your To-Do List</h2>
         <ul id="tasks"></ul>
+
+        <h3>Add Your Own Task</h3>
+        <input type="text" id="custom-task" placeholder="Enter your task...">
+        <button onclick="addCustomTask()">Add Task</button>
     </div>
 
     <script>
@@ -220,7 +198,7 @@
 
         function showSuggestions() {
             const city = document.getElementById("city").value;
-            document.getElementById("tasks").innerHTML = ""; // Clears only the to-do list
+            document.getElementById("tasks").innerHTML = "";
             const cityInfo = document.getElementById("city-info");
             cityInfo.innerHTML = `<h3>Things to do in ${city}:</h3>`;
             if (cityTasks[city]) {
@@ -233,15 +211,30 @@
         function addTask(task, button) {
             if (!addedTasks.has(task)) {
                 addedTasks.add(task);
-                document.getElementById("tasks").innerHTML += `<li>${task} <button onclick="removeTask('${task}', this)">Done</button></li>`;
+                const taskItem = document.createElement("li");
+                taskItem.innerHTML = `${task} <button onclick="removeTask(this)">Done</button>`;
+                document.getElementById("tasks").appendChild(taskItem);
                 button.disabled = true;
                 button.classList.add("disabled");
             }
         }
 
-        function removeTask(task, button) {
-            addedTasks.delete(task);
-            button.parentElement.remove();
+        function addCustomTask() {
+            const customTaskInput = document.getElementById("custom-task");
+            const customTask = customTaskInput.value.trim();
+            if (customTask && !addedTasks.has(customTask)) {
+                addedTasks.add(customTask);
+                const taskItem = document.createElement("li");
+                taskItem.innerHTML = `${customTask} <button onclick="removeTask(this)">Done</button>`;
+                document.getElementById("tasks").appendChild(taskItem);
+                customTaskInput.value = "";
+            }
+        }
+
+        function removeTask(button) {
+            const taskItem = button.parentElement;
+            taskItem.classList.add("done");
+            setTimeout(() => taskItem.remove(), 600);
         }
     </script>
 </body>
